--- a/requirements.txt
+++ b/requirements.txt
@@ -1,294 +1,4 @@
-﻿15five-django-ajax-selects==1.5.2.155
-absl-py==1.4.0
-altair==5.5.0
-altgraph==0.17.4
-annotated-types==0.7.0
-anyio==4.6.2.post1
-apispec==6.8.0
-asgiref==3.8.1
-astunparse==1.6.3
-attrs==24.3.0
-auto-py-to-exe==2.45.0
-awscli==1.35.13
-babel==2.16.0
-blinker==1.9.0
-blis==1.1.0
-boto3==1.35.47
-botocore==1.35.47
-bottle==0.13.2
-bottle-websocket==0.2.9
-build==1.2.2.post1
-cachetools==5.5.0
-caer==2.0.8
-catalogue==2.0.10
-certifi==2024.8.30
-cffi==1.17.1
-charset-normalizer==2.1.1
-click==8.1.7
-cloudpathlib==0.20.0
-colorama==0.4.6
-comtypes==1.4.8
-confection==0.1.5
-contourpy==1.3.1
-cv==1.0.0
-cycler==0.12.1
-cymem==2.0.10
-dataclasses-json==0.5.14
-deep-sort-realtime==1.3.2
-Deprecated==1.2.15
-dill==0.3.9
-display==1.0.0
-distlib==0.3.9
-distro==1.9.0
-Django==5.1.2
-django-model-utils==5.0.0
-dm-tree==0.1.8
-dnspython==2.7.0
-docker==7.1.0
-docstring_parser==0.16
-docutils==0.16
-Eel==0.18.1
-email_validator==2.2.0
-etils==1.11.0
-ezdxf==1.3.5
-filelock==3.16.1
-filterpy==1.4.5
-Flask==2.0.1
-Flask-AppBuilder==5.0.0rc1
-Flask-Babel==2.0.0
-Flask-JWT-Extended==4.7.1
-Flask-Limiter==3.9.2
-Flask-Login==0.6.3
-Flask-SQLAlchemy==3.1.1
-Flask-WTF==1.2.2
-flatbuffers==24.3.25
-fonttools==4.55.3
-fsspec==2024.10.0
-future==1.0.0
-gast==0.6.0
-geopandas==1.0.1
-gevent==24.11.1
-gevent-websocket==0.10.1
-gitdb==4.0.11
-GitPython==3.1.43
-google-ai-generativelanguage==0.6.15
-google-api-core==2.24.0
-google-api-python-client==2.159.0
-google-auth==2.37.0
-google-auth-httplib2==0.2.0
-google-generativeai==0.8.4
-google-pasta==0.2.0
-googleapis-common-protos==1.66.0
-greenlet==3.1.1
-grid-extractor==0.0.2
-grpcio==1.69.0
-grpcio-status==1.69.0
-gTTS==2.5.3
+flask==2.0.3
+google-generativeai==0.3.2
 gunicorn==20.1.0
-h11==0.14.0
-h5py==3.12.1
-httpcore==1.0.6
-httplib2==0.22.0
-httpx==0.27.2
-huggingface-hub==0.27.1
-idna==3.10
-image==1.5.33
-image-rename==0.2.0
-imageio==2.36.1
-immutabledict==4.2.1
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-itsdangerous==2.2.0
-jaraco.classes==3.4.0
-jaraco.context==6.0.1
-jax==0.4.38
-jaxlib==0.4.38
-Jinja2==3.1.4
-jiter==0.6.1
-jmespath==1.0.1
-joblib==1.4.2
-jsonschema==4.23.0
-jsonschema-specifications==2024.10.1
-kagglehub==0.3.6
-keras==3.7.0
-Keras-Applications==1.0.8
-keras-core==0.1.7
-keras-cv==0.9.0
-keras-model-client==0.1.1
-keras-model-cv==0.5.4
-keras-model-extract==0.0.2
-keras-model-hub==0.0.6
-keras-model-specs==2.1.1
-keras-models==0.0.7
-Keras-Preprocessing==1.1.2
-keyring==8.7
-keyrings.alt==5.0.2
-kiwisolver==1.4.8
-langcodes==3.5.0
-langdetect==1.0.9
-language_data==1.3.0
-lazy_loader==0.4
-libclang==18.1.1
-limits==3.14.1
-load-dotenv==0.1.0
-marisa-trie==1.2.1
-Markdown==3.7
-markdown-it-py==3.0.0
-MarkupSafe==3.0.1
-marshmallow==3.23.2
-marshmallow-sqlalchemy==0.30.0
-matplotlib==3.10.0
-mdurl==0.1.2
-mediapipe==0.10.20
-ml-dtypes==0.4.1
-mock==5.1.0
-more-itertools==10.5.0
-mpmath==1.3.0
-mua-keras-models==0.0.2
-murmurhash==1.0.11
-mypy==1.13.0
-mypy-extensions==1.0.0
-namex==0.0.8
-narwhals==1.20.1
-networkx==3.4.2
-nltk==3.9.1
-numpy==1.26.4
-openai==1.52.0
-opencv-contrib-python==4.10.0.84
-opencv-python==4.8.0.74
-opencv-python-headless==4.10.0.84
-opt_einsum==3.4.0
-optree==0.13.0
-ordered-set==4.1.0
-packaging==24.2
-pandas==2.2.3
-pathlib==1.0.1
-pefile==2023.2.7
-pillow==11.0.0
-pip-tools==7.4.1
-platformdirs==4.3.6
-playsound==1.3.0
-preshed==3.0.9
-prison==0.2.1
-promise==2.3
-proto-plus==1.25.0
-protobuf==5.29.3
-psutil==6.1.0
-py-cpuinfo==9.0.0
-pyarrow==18.1.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.1
-pycparser==2.22
-pydantic==2.9.2
-pydantic_core==2.23.4
-pydeck==0.9.1
-pyfiglet==1.0.2
-pygame==2.6.1
-Pygments==2.18.0
-pyinstaller==6.11.1
-pyinstaller-hooks-contrib==2024.10
-PyJWT==2.10.1
-pyogrio==0.10.0
-pyparsing==3.2.0
-PyPDF2==3.0.1
-pypiwin32==223
-pyproj==3.7.0
-pyproject_hooks==1.2.0
-pytesseract==0.3.13
-python-dateutil==2.9.0.post0
-python-dotenv==1.0.1
-pyttsx3==2.98
-pytz==2024.2
-pywebio==1.8.3
-pywin32==308
-pywin32-ctypes==0.2.3
-PyYAML==6.0.2
-qrcode==8.0
-referencing==0.35.1
-regex==2024.9.11
-replicate==1.0.2
-requests==2.28.1
-rich==13.9.2
-rpds-py==0.22.3
-rsa==4.7.2
-ruamel.yaml==0.18.6
-ruamel.yaml.clib==0.2.12
-s3transfer==0.10.3
-safetensors==0.5.2
-scikit-image==0.25.0
-scikit-learn==1.6.0
-scipy==1.14.1
-seaborn==0.13.2
-sentencepiece==0.2.0
-setuptools==75.6.0
-shapely==2.0.6
-shellingham==1.5.4
-simple-parsing==0.1.6
-six==1.17.0
-smart-open==7.1.0
-smmap==5.0.1
-sniffio==1.3.1
-sounddevice==0.5.1
-spacy==3.8.3
-spacy-legacy==3.0.12
-spacy-loggers==1.0.5
-SQLAlchemy==2.0.36
-SQLAlchemy-Utils==0.41.2
-sqlparse==0.5.1
-srsly==2.5.0
-stopwords==1.0.1
-streamlit==1.41.1
-style==1.1.0
-sympy==1.13.1
-tabulate==0.9.0
-telegram==0.0.1
-tenacity==9.0.0
-tensorboard==2.18.0
-tensorboard-data-server==0.7.2
-tensorflow==2.18.0
-tensorflow-datasets==4.9.7
-tensorflow-hub==0.16.1
-tensorflow-metadata==1.16.1
-tensorflow-model-optimization==0.8.0
-tensorflow-model-remediation==0.1.7.1
-tensorflow_intel==2.18.0
-termcolor==2.5.0
-tesseract==0.1.3
-tf_keras==2.18.0
-thinc==8.3.3
-threadpoolctl==3.5.0
-tifffile==2024.12.12
-tk==0.1.0
-tokenizers==0.21.0
-toml==0.10.2
-torch==2.5.1
-torchvision==0.20.0
-tornado==6.4.2
-tqdm==4.66.5
-transformers==4.48.1
-typer==0.15.1
-typing-inspect==0.9.0
-typing_extensions==4.12.2
-tzdata==2024.2
-ua-parser==1.0.0
-ua-parser-builtins==0.18.0.post1
-ultralytics==8.3.21
-ultralytics-thop==2.0.9
-update==0.0.1
-uritemplate==4.1.1
-urllib3==1.26.20
-user-agents==2.2.0
-virtualenv==20.27.0
-voluptuous==0.15.2
-wasabi==1.1.3
-watchdog==6.0.0
-weasel==0.4.1
-Werkzeug==3.1.3
-wheel==0.45.1
-wrapt==1.16.0
-WTForms==3.2.1
-yolo==0.3.1
-zipp==3.21.0
-zope.event==5.0
-zope.interface==7.2
-uvicorn==0.15.0
+python-dotenv==0.19.2
